--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -263,7 +263,7 @@
   }
 
   .header__phone {
-    margin-top: calc($header-margin-top-mobile*2);
+    margin-top: calc(#{$header-margin-top-mobile} * 2);
   }
 
   .header__phone-img,
