small fixed of adaptive and change enviroment of project

--- a/src/styles/consultation.scss
+++ b/src/styles/consultation.scss
@@ -34,7 +34,7 @@
   padding: 17px 0 17px 17px;
   outline: none;
   color: $dark-grey;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   transition: width $transition-time;
 
   &__email {
@@ -60,7 +60,7 @@
   border-color: $blue;
   text-align: center;
   line-height: 56px;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: 700;
   margin-bottom: 152px;
   transition: margin-bottom $transition-time;
@@ -76,7 +76,6 @@
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1040px) {
-
   .container {
     width: 750px;
   }
@@ -86,7 +85,7 @@
   .container {
     width: calc(100% - 46px * 2);
   }
-  
+
   .consultation__heading {
     margin-bottom: 53px;
   }
@@ -120,7 +119,6 @@
   .form__button {
     margin-bottom: 64px;
   }
-
 }
 
 @media screen and (max-width: 500px) {
@@ -132,7 +130,6 @@
   .form__button {
     width: 280px;
   }
-
 }
 
 @media screen and (max-width: 320px) {
