--- a/src/styles/aboutUsScreen.scss
+++ b/src/styles/aboutUsScreen.scss
@@ -8,7 +8,6 @@
   font-size: 48px;
   font-weight: 700;
   margin-top: 0;
-
 }
 
 .about__span-title {
@@ -37,7 +36,6 @@
 }
 
 @media screen and (min-width: 768px) and (max-width: 1040px) {
-
   .container {
     width: 750px;
   }
@@ -56,11 +54,13 @@
     display: block;
   }
 
+  .about__left-title {
+    font-size: 36px;
+  }
 }
 
 @media screen and (max-width: 320px) {
   .container {
     width: calc(100% - 46px);
   }
-
 }
