--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background-image: url("../images/new_footer.jpg");
+  background-image: url('../images/new_footer.jpg');
   background-size: cover;
   background-position: center;
   height: 359px;
@@ -19,25 +19,24 @@
 }
 
 @media screen and (min-width: 768px) and (max-width: 1040px) {
-
   .container {
     width: 750px;
   }
 }
 
 @media screen and (max-width: 767px) {
-  .container {
-    width: 700px;
-  }
+  // .container {
+  //   width: 700px;
+  // }
   .footer {
     height: 306px;
   }
 }
 
 @media screen and (max-width: 500px) {
-  .container {
-    width: 454px;
-  }
+  // .container {
+  //   width: 454px;
+  // }
 
   .footer {
     height: 206px;
