--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,5 +1,5 @@
 .header {
-  background-image: url("../images/new_header.jpg");
+  background-image: url('../images/new_header.jpg');
   background-size: cover;
   background-position: center;
   height: 100vh;
@@ -121,20 +121,19 @@
 }
 
 .burger__icon:before {
-  content: "";
+  content: '';
   top: -9px;
   transition: top 300ms 300ms, transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
 }
 
 .burger__icon:after {
-  content: "";
+  content: '';
   bottom: -9px;
-  transition: bottom 300ms 300ms,
-    transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  transition: bottom 300ms 300ms, transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
 }
 
 .burger__icon.active:before {
-  content: "";
+  content: '';
   top: 0;
   transform: rotate(45deg);
   transition: top 300ms,
@@ -142,7 +141,7 @@
 }
 
 .burger__icon.active:after {
-  content: "";
+  content: '';
   bottom: 0;
   transform: rotate(-45deg);
   transition: bottom 300ms,
@@ -165,10 +164,11 @@
   padding: 10px;
   position: fixed;
   top: 0;
-  left: -5000px;
+  left: -1000px;
   z-index: -1;
   transition: left 1s cubic-bezier(0.68, -0.55, 0.27, 1.55),
     z-index 1s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+  display: none;
 }
 
 .burger__menu.animate {
@@ -230,7 +230,6 @@
 
 // burger
 @media screen and (min-width: 768px) and (max-width: 1040px) {
-
   .container {
     width: 750px;
   }
@@ -257,13 +256,13 @@
   .container {
     width: calc(100% - 46px * 2);
   }
-  
+
   .header__link {
     display: none;
   }
 
   .header__phone {
-    margin-top: calc(#{$header-margin-top-mobile} * 2);
+    margin-top: calc(#{$header-margin-top-mobile});
   }
 
   .header__phone-img,
@@ -284,7 +283,8 @@
     font-size: 40px;
   }
 
-  .burger {
+  .burger,
+  .burger__menu {
     display: block;
   }
 }
@@ -293,7 +293,7 @@
   .container {
     width: calc(100% - 46px);
   }
-  
+
   .header__phone {
     margin-top: $header-margin-top-mobile;
   }
